# FileIntranetShare

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
landing/: README.md  index.html
scripts/: build-macos.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  net.rs  tray.rs
src-tauri/src/server/: auth.rs  files.rs  firewall.rs  mod.rs  placeholder.html  routes.rs  state.rs  upload.rs
src-tauri/tests/: export_bindings.rs
src/api/: auth.ts  chunk-upload.ts  guest.ts  host.ts
src/bindings/: AppConfig.ts  AuditLog.ts  FileItem.ts  README.md  TextItem.ts
src/components/: QrCode.vue  ThemeSwitch.vue
src/composables/: useShareList.ts  useSync.ts  useTheme.ts
src/router/: index.ts
src/stores/: config.ts  server.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: clipboard.ts  format.ts  text-share.ts
src/views/Guest/: GuestMain.vue  Index.vue  Login.vue
src/views/Host/: AuditLog.vue  Index.vue  Settings.vue  ShareList.vue
