[package]
name = "fileshare"
version = "0.1.0"
description = "FileShare - 局域网文件 / 文本共享工具（Tauri 2 + Vue 3 + axum）"
authors = ["FileShare Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/qq1184216345/FileIntranetShare"
homepage = "https://github.com/qq1184216345/FileIntranetShare"
readme = "../README.md"

[lib]
name = "fileshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / WebSocket (D3+ 启用)
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# 工具
local-ip-address = "0.6"
nanoid = "0.4"
mime_guess = "2"
parking_lot = "0.12"
urlencoding = "2"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# 鉴权
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false }
rand = "0.8"

# 剪贴板图片 PNG 编码（仅启用 png）
image = { version = "0.25", default-features = false, features = ["png"] }

# 持久化：文件 / 文本 记录
rusqlite = { version = "0.32", features = ["bundled"] }
