[package]
name = "fileshare"
version = "0.1.2"
description = "FileShare - 局域网文件 / 文本共享工具（Tauri 2 + Vue 3 + axum）"
authors = ["FileShare Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/qq1184216345/FileIntranetShare"
homepage = "https://github.com/qq1184216345/FileIntranetShare"
readme = "../README.md"

[lib]
name = "fileshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / WebSocket (D3+ 启用)
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# 工具
local-ip-address = "0.6"
nanoid = "0.4"
mime_guess = "2"
parking_lot = "0.12"
urlencoding = "2"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
indexmap = "2"

# 鉴权
argon2 = "0.5"
jsonwebtoken = { version = "9", default-features = false }
rand = "0.8"

# 剪贴板图片 PNG 编码（仅启用 png）
image = { version = "0.25", default-features = false, features = ["png"] }

# 持久化：文件 / 文本 记录
rusqlite = { version = "0.32", features = ["bundled"] }
fs4 = "1.0.0"

# P3-16: 前端类型自动生成。只在 cargo 开启 `export-ts` feature 时编译，
# 默认不引入 derive 宏，避免影响常规构建耗时与二进制大小。
# 使用：`cargo test --features export-ts export_bindings` 把 TS 类型写到 ../src/bindings/
ts-rs = { version = "^10", optional = true }


# ---------- 发布构建优化 ----------
# 目标：压小二进制体积（LTO + strip + 单 codegen unit），
# 同时用 abort panic 进一步去掉 unwind 表。
# 代价：release 编译会显著变慢（首次从 0 编译约 5~10 分钟），但日常 dev 构建不受影响。
[profile.release]
opt-level = "z"        # 体积优先（vs "s" 更激进），axum/tokio 热点路径性能影响可忽略
lto = true             # 链接时优化：跨 crate 内联与死代码消除
codegen-units = 1      # 关闭并行 codegen，允许更彻底优化
strip = "symbols"      # 去掉调试符号
panic = "abort"        # panic 直接中止，省掉 unwind 表（我们没有 catch_unwind 依赖）
incremental = false    # release 关闭增量，彻底构建更稳定

[features]
# P3-16: 开启后编译时会把关键 Rust 类型通过 ts-rs 宏展开，test 中再导出成 TS
export-ts = ["dep:ts-rs"]

# dev 保持默认（快编译 + 完整调试信息）
